--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <button onclick="alert('Hola!')">Saludar</button>
+    <div id="a"><button onclick="alert('Hola!')">Saludar</button>
+    </div>
+    <script src="evento.js"></script>
 </body>
 </html>
