--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <div id="a"><button onclick="alert('Hola!')">Saludar</button>
+    <div id="a"><button)">Saludar</button>
     </div>
     <script src="evento.js"></script>
 </body>
